--- a/style.css
+++ b/style.css
@@ -1,28 +1,61 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-:root{
-    /* colors */
-    --primary-color : #6059C9;
-    --secondary-color :  #bfbbe4;
-    --bg-color : #fffcf7;
-    --bg-secondary-color :#F5EFE0;
-    --white-color : #fff;
-    --gray-color : #475467;
+/* start variabls */
+:root {
+  /* colors */
+  --primary-color: #6059c9;
+  --secondary-color: #bfbbe4;
+  --bg-color: #fffcf7;
+  --bg-secondary-color: #f5efe0;
+  --white-color: #fff;
+  --gray-color: #475467;
 
-    /* fonts */
-    --font-family : 'Inter', sans-serif;
-
-
-
+  /* fonts */
+  --font-family: "Inter", sans-serif;
 }
+/* end variabls */
+
+/* start components */
+html {
+  scroll-behavior: smooth;
+}
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* end components */
+
+/* start scroll  */
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 2px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary-color);
+}
+/* .page {
+  background-color: #f1f5f9;
+   height: 100vh; 
+} */
+
+/* end scroll  */
