--- a/style.css
+++ b/style.css
@@ -75,10 +75,14 @@ body {
 
 /* start home section  */
 .home {
-  background-image: url(./assets/);
+  position: relative;
+  padding-bottom: var(--padding-3);
 }
 /* start header  */
 .home__header {
+  /* position: fixed;
+  top: 0; */
+
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -107,26 +111,41 @@ body {
 }
 .home__header__nav a:hover {
   color: var(--primary-color);
-
 }
 .home__header__nav a:hover::before {
   left: 5%;
 }
-
-.home__header__nav input {
-  margin-left: var(--margin-1);
+.home__header__nav__search__icon {
+  position: relative;
+}
+.home__header__nav__search__icon .search__icon {
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+  color: var(--primary-color);
+  pointer-events: none;
+}
+.home__header__nav__search__icon input {
   border-radius: 8px;
   outline: none;
   caret-color: var(--primary-color);
   padding: var(--padding-05);
+  padding-left: 2.5rem;
   background-color: var(--bg-color);
   border-color: var(--secondary-color);
-  width: 14rem;
+  width: 15rem;
   transition: width 0.4s;
 }
-.home__header__nav input:focus {
+.home__header__nav__search__icon input:focus {
   border-color: var(--primary-color);
-  width: 16rem;
+  width: 17rem;
+}
+
+@media (max-width: 991px) {
+  .home__header__nav {
+    display: none;
+  }
 }
 
 /* start body  */
@@ -157,6 +176,29 @@ body {
   top: 43%;
   transform: translate(-50%, -50%);
 }
+@media (min-width: 768px) and (max-width: 1200px) {
+  .home__body__img {
+    max-width: 100%;
+  }
+  .home__body__img .img-bg,
+  .home__body__img .image {
+    max-width: 80%;
+  }
+}
+.home__go-down {
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translatex(-50%);
+  color: var(--primary-color);
+  transition: 0.3s;
+}
+.home__go-down:hover {
+  color: var(--secondary-color);
+}
+.home__go-down i {
+  animation: bouncing 1.5s infinite;
+}
 /* end home section  */
 
 /* start login section  */
@@ -170,11 +212,13 @@ body {
   background-color: var(--primary-color);
   padding: var(--padding-5);
   color: var(--white-color);
+  height: 550px;
 }
 .login__right {
   background-color: var(--bg-secondary-color);
   padding: var(--padding-5);
   color: var(--primary-color);
+  height: 550px;
 }
 .login__icon {
   margin-bottom: var(--margin-3);
@@ -214,3 +258,59 @@ body {
   border: 1px solid var(--primary-color);
 }
 /* end login section  */
+
+/* Start campaign  */
+.campaign__head {
+  text-align: center;
+  margin-bottom: var(--margin-7);
+}
+.campaign__head h1 {
+  font-weight: bold;
+  font-size: 3.1rem;
+}
+.campaign__head p {
+  color: var(--gray-color);
+  font-size: 1.2rem;
+}
+
+.campaign__body__box {
+  display: flex;
+  gap: 20px;
+  margin-bottom: var(--margin-2);
+}
+.campaign__body__box__img {
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  width: 4.5rem;
+  height: 4.5rem;
+  padding: var(--padding-1);
+  text-align: center;
+}
+
+.campaign__body__box__text h3 {
+  font-weight: bold;
+}
+.campaign__body__box__text p {
+  color: var(--gray-color);
+}
+
+.campaign__body__img img {
+  max-width: 100%;
+}
+/* end campaign  */
+
+/* start animation */
+@keyframes bouncing {
+  0%,
+  10%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40%,
+  60% {
+    transform: translateY(-15px);
+  }
+}
