create campaign details page

--- a/style.css
+++ b/style.css
@@ -70,6 +70,19 @@ body {
   font-weight: 600;
 
 }
+.font-black-600-20{
+  color: var(--black-color);
+  font-size: 1.25rem;
+  font-weight: 600;
+
+}
+
+.font-black-600-18{
+  color: var(--black-color);
+  font-size: 1.125rem;
+  font-weight: 600;
+
+}
 
 .font-gray-400-16 {
   color: var(--gray-color);
