--- a/campaign-details-page-style.css
+++ b/campaign-details-page-style.css
@@ -5,7 +5,7 @@
 .div--icon-person{
     height: 2.625rem;
     width: 2.625rem;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     display: flex;
     justify-content: center;
 }
