--- a/style.css
+++ b/style.css
@@ -68,18 +68,16 @@ body {
   font-weight: 600;
 }
 
-.font-black-600-20{
+.font-black-600-20 {
   color: var(--black-color);
   font-size: 1.25rem;
   font-weight: 600;
-
 }
 
-.font-black-600-18{
+.font-black-600-18 {
   color: var(--black-color);
   font-size: 1.125rem;
   font-weight: 600;
-
 }
 
 .font-gray-400-16 {
@@ -92,6 +90,7 @@ body {
   font-size: 1rem;
   font-weight: 500;
 }
+
 .font-black-600-14 {
   color: var(--black-color);
   font-size: 0.8rem;
@@ -133,6 +132,7 @@ body {
   left: 0;
   background-color: var(--bg-color);
   z-index: 5;
+  box-shadow: 2px 2px 10px #eee;
 }
 
 .home__header__logo img {
@@ -212,7 +212,6 @@ body {
   .home__header .listBtn {
     display: block;
   }
-
   .home__header nav .menu-wrapper {
     position: absolute;
     top: 7rem;
@@ -291,11 +290,11 @@ body {
 }
 
 .home__go-down {
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: translatex(-50%);
+  position: fixed;
+  bottom: 4rem;
+  right: 2.5rem;
   color: var(--primary-color);
+  transform: rotate(180deg) !important;
   transition: 0.3s;
 }
 .home__go-down:hover {
@@ -402,7 +401,6 @@ body {
 .progress::-webkit-progress-bar {
   background-color: var(--secondary-color);
 }
-
 /* end login section  */
 
 /* Start campaign  */
@@ -472,5 +470,4 @@ body {
   60% {
     transform: translateY(-15px);
   }
-
 }
