--- a/public/style.css
+++ b/public/style.css
@@ -68,20 +68,16 @@ body {
   font-weight: 600;
 }
 
-.font-black-600-20{
+.font-black-600-20 {
   color: var(--black-color);
   font-size: 1.25rem;
   font-weight: 600;
-
 }
 
-.font-black-600-18{
+.font-black-600-18 {
   color: var(--black-color);
   font-size: 1.125rem;
   font-weight: 600;
-
-
-
 }
 
 .font-gray-400-16 {
@@ -137,9 +133,7 @@ body {
   background-color: var(--bg-color);
   z-index: 5;
 
-
   box-shadow: 2px 2px 10px #eee;
-
 }
 
 .home__header__logo img {
@@ -298,14 +292,15 @@ body {
 }
 
 .home__go-down {
-
   position: fixed;
   bottom: 4rem;
   right: 2.5rem;
   color: var(--primary-color);
   transform: rotate(180deg) !important;
-
   transition: 0.3s;
+  z-index: 99;
+  cursor: pointer;
+  display: none;
 }
 .home__go-down:hover {
   color: var(--secondary-color);
@@ -454,19 +449,19 @@ body {
 .campaign__body__img img {
   max-width: 100%;
 }
-.div--icon-person{
-    height: 2.625rem;
-    width: 2.625rem;
-    background-color: var(--secondary-color);
-    display: flex;
-    justify-content: center;
+.div--icon-person {
+  height: 2.625rem;
+  width: 2.625rem;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
 }
 
 .invalid {
   display: none;
   color: red;
 }
-.alert{
+.alert {
   display: none;
 }
 /* end campaign  */
@@ -496,6 +491,4 @@ body {
   60% {
     transform: translateY(-15px);
   }
-
 }
-
